<resources>
    <string name="app_name">HelloWorld</string>
    <string name="password">登陆密码</string>
    <string name="phone">手机号/邮箱</string>
    <string name="login">登录</string>
    <string name="nihao">你好,世界</string>
    <string name="todo">TODO</string>
    <string name="mingzi">昵称</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="xiaoren">图片</string>
    <string name="denglu">登陆密码</string>
    <string name="qieren">确认密码</string>
    <string name="sj">手机号/邮箱</string>
    <string name="jieshou">接收信息推送</string>
    <string name="dui">同意本软件的用户服务协议和隐私政策</string>
    <string name="zhuc">注册</string>
    <string name="welcome">你好,欢迎使用~</string>
    <string name="nc">昵称</string>
    <string name="sex">性别</string>
    <string name="sjhm">手机号码</string>
    <string name="pwd">新密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="button_reset">更改密码</string>
    <string name="button_forget">忘记密码</string>

</resources>
