<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPwd">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:contentDescription="@string/xiaoren"
            app:srcCompat="@drawable/zhuaohuimm" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:drawableStart="@drawable/username"
            android:ems="10"
            android:hint="@string/mingzi"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/xiaoren"
                app:srcCompat="@drawable/sex" />

            <RadioGroup
                android:id="@+id/radio_group_sex"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/nan" />

                <RadioButton
                    android:id="@+id/radio_women"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:text="@string/nv" />

            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:drawableStart="@drawable/phone"
            android:ems="10"
            android:hint="@string/sj"
            android:inputType="phone"
            android:maxLength="11" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/reset_pwd" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>