<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePwd">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="312dp"
        android:layout_height="236dp"
        android:layout_marginHorizontal="50dp"
        android:contentDescription="@string/xiaoren"
        app:layout_constraintBottom_toTopOf="@+id/edit_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ok_password" />

    <EditText
        android:id="@+id/edit_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edit_ok_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_ok_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/qieren"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pwd"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_ok_pwd" />

</androidx.constraintlayout.widget.ConstraintLayout>